feat: footer + favicon

--- a/index.html
+++ b/index.html
@@ -8,10 +8,31 @@
     <link rel="stylesheet" href="assets/styles/app.css">
     <link rel="stylesheet" href="assets/styles/fields.css">
     <script type="module" src="assets/modules/app/Bootstrap.mjs"></script>
+    <link rel="shortcut icon" href="https://mia.kiwi/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
     <main id="main" class="main"></main>
+
+    <footer class="kw-footer">
+        <div class="strapline">
+            <p></p>
+        </div>
+        <div class="info">
+            <p style="margin-top: 0;">Palette Generator <span style="opacity: 0.5;">• 25.2.1</span></p>
+        </div>
+        <div class="links">
+            <a href="https://mia.kiwi/projects/kiwi.mia.0020/25.2.1" target="_blank" rel="noopener noreferrer">Project Page</a>
+            <a href="https://github.com/miakiwi/palette-generator" target="_blank" rel="noopener noreferrer">GitHub</a>
+            <a href="https://mia.kiwi" target="_blank" rel="noopener noreferrer">My Website</a>
+            <a href="https://delan.sh" target="_blank" rel="noopener noreferrer">My Other Website</a>
+        </div>
+        <div class="notices">
+            <p style="text-align: center;">© 2025 DELAN Mia. All rights reserved.</p>
+            <p></p>
+        </div>
+    </footer>
+
 </body>
 
 </html>
